fix: wrong package name